tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@iterate_on_non_array.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/iterate_on_non_array.txt
---
error: Iteration not possible on type `i64`
 --> iterate_on_non_array.txt:1:13
  |
1 | {% for i in age %}
  |             ^^^
